--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         type: "post",
         data: $("#myForm3").serializeArray(),
         success: function () {
-          alert("Form Data Submitted :)")
+          alert("Subscribed ! ")
         },
         error: function () {
           alert("There was an error :(")
