--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   <link href="img/hospital-xxl.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
+  <!-- <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+    rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -189,6 +192,7 @@
           </div>
           <div class="row">
             <div class="col-md-4 form-group mt-3">
+              <h5>Appointment Date</h5>
               <input type="date" name="Date" class="form-control datepicker" id="date" placeholder="Appointment Date"
                 data-rule="minlen:4" data-msg="Please enter at least 4 chars">
               <div class="validate"></div>
@@ -771,16 +775,16 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>DR. OMKAR KAJALE</h3>
-            <p>
+          <div class="col-lg-3 col-md-6 footer-contact text-white">
+            <h3 class="text-white">DR. OMKAR KAJALE</h3>
+            <p class="text-white">
               Bajarpeth , Near Janta Bakery <br>
               Rajgurunagar, Tal-Khed<br>
               Dist-Maharashtra , 410505 <br><br>
             </p>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <!-- <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
@@ -789,16 +793,16 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Times</h4>
-            <p>9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
+            <h4 class="text-white">Our Times</h4>
+            <p class="text-white">9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
               <br><br>
               <strong>Phone:</strong>
-            <p><a href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a><br>
+            <p><a class="text-white" href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a><br>
               <strong>Email:</strong>
-            <p><a href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a></p> <br>
+            <p><a class="text-white" href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a></p> <br>
 
           </div>
 
@@ -832,6 +836,8 @@
     </div>
   </footer><!-- End Footer -->
 
+
+  
   <!-- Informative Page -->
 
   <div id="preloader"></div>
