--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 
         <div class="section-title">
           <h2>CONTACT US</h2>
-          <p>YOUR HEALTH IS OUR RESPONSIBILITY</p>
+          <h4>YOUR HEALTH IS OUR RESPONSIBILITY</p>
         </div>
       </div>
 
@@ -795,20 +795,19 @@
             </ul>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 footer-links ">
             <h4 class="text-white">Our Times</h4>
             <p class="text-white">9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
-              <br><br>
-              <strong>Phone:</strong>
-            <p><a class="text-white" href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a><br>
-              <strong>Email:</strong>
-            <p><a class="text-white" href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a></p> <br>
-
+              <br>
+              <p > <strong class="text-white">Phone  :  </strong><a class="text-white" href="tel:+919665914363" class="call_float " target="_blank"> +919665914363</a><br>
+             
+                <p> <strong class="text-white">Email  :  </strong><a class="text-white" href="mailto:info@dromkarkajale.com"> info@dromkarkajale.com</a></p> <br>
+    
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>FOR HEALTH TIPS AND UPDATES.</p>
+            <h4 class="text-white">Join Our Newsletter</h4>
+            <p class="text-white">FOR HEALTH TIPS AND UPDATES.</p>
             <form id="myForm3" method="post" class="php-email-form">
               <input type="email" name="Email" id="Email"><input onclick="SubForm3 () ; resetNewsletter()" type="submit"
                 value="Subscribe">
