--- a/AsthmaTips.html
+++ b/AsthmaTips.html
@@ -253,7 +253,7 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="col-lg-4 col-md-6 d-flex" style="text-align: left;">
           <div class="icon-box">
             <h4>Do's</h4>
             <h6>Always keep an inhaler with you while travelling. <br>
@@ -265,12 +265,12 @@
               <br>
 
               <h4>Dont's</h4>
-              <h6>Don’t forget your inhaler <br>
-                Don’t forget to take your medications and ensure to take these at correct times <br>
-                Don’t smoke and avoid alcohol consumption <br>
+              <h6>Don’t forget your inhaler .<br>
+                Don’t forget to take your medications and ensure to take these at correct times.<br>
+                Don’t smoke and avoid alcohol consumption. <br>
                 Don’t stop exercising but make sure you talk to your doctor about how to begin an exercise program
-                safely <br>
-                Do not over eat and avoid taking spicy food</h6>
+                safely. <br>
+                Do not over eat and avoid taking spicy food.</h6>
           </div>
         </div>
 
@@ -499,73 +499,72 @@
 
   </main><!-- End #main -->
 
-<!-- ======= Footer ======= -->
-<footer id="footer">
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
 
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
 
-        <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>DR. OMKAR KAJALE</h3>
-          <p>
-            Bajarpeth , Near Janta Bakery <br>
-            Rajgurunagar, Tal-Khed<br>
-            Dist-Maharashtra , 410505 <br><br>
-          </p>
+          <div class="col-lg-3 col-md-6 footer-contact text-white">
+            <h3 class="text-white">DR. OMKAR KAJALE</h3>
+            <p class="text-white">
+              Bajarpeth , Near Janta Bakery <br>
+              Rajgurunagar, Tal-Khed<br>
+              Dist-Maharashtra , 410505 <br><br>
+            </p>
+          </div>
+
+          <!-- <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#departments">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div> -->
+
+          <div class="col-lg-3 col-md-6 footer-links ">
+            <h4 class="text-white">Our Times</h4>
+            <p class="text-white">9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
+              <br>
+              <p > <strong class="text-white">Phone  :  </strong><a class="text-white" href="tel:+919665914363" class="call_float " target="_blank"> +919665914363</a><br>
+             
+                <p> <strong class="text-white">Email  :  </strong><a class="text-white" href="mailto:info@dromkarkajale.com"> info@dromkarkajale.com</a></p> <br>
+    
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4 class="text-white">Join Our Newsletter</h4>
+            <p class="text-white">FOR HEALTH TIPS AND UPDATES.</p>
+            <form id="myForm3" method="post" class="php-email-form">
+              <input type="email" name="Email" id="Email"><input onclick="SubForm3 () ; resetNewsletter()" type="submit"
+                value="Subscribe">
+            </form>
+          </div>
+
         </div>
-
-        <div class="col-lg-2 col-md-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#hero">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#departments">Services</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Our Times</h4>
-          <p>9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
-            <br><br>
-            <strong>Phone:</strong>
-          <p><a href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a><br>
-            <strong>Email:</strong>
-          <p><a href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a></p> <br>
-
-        </div>
-
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Join Our Newsletter</h4>
-          <p>FOR HEALTH TIPS AND UPDATES.</p>
-          <form id="myForm3" class="php-email-form">
-            <input type="email" name="Email" id="Email"><input onclick="SubForm3 () ; resetNewsletter()" type="submit"
-              value="Subscribe">
-          </form>
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <div class="container d-md-flex py-4">
+    <div class="container d-md-flex py-4">
 
-    <!-- <div class="me-md-auto text-center text-md-start">
-      <div class="copyright">
-        &copy; Copyright <strong><span>odd creatives and management</span></strong>. All Rights Reserved
+      <!-- <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          &copy; Copyright <strong><span>odd creatives and management</span></strong>. All Rights Reserved
+        </div>
+      </div> -->
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-    </div> -->
-    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
     </div>
-  </div>
-</footer><!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <!-- Informative Page -->
 
