--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           <li><a class="nav-link scrollto" href="#contact">CONTACT</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
+      <!-- .navbar -->
 
       <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span>
         Appointment</a>
@@ -193,7 +194,7 @@
           </div>
           <div class="row">
             <div class="col-md-4 form-group mt-3">
-              <h5>Appointment Date</h5>
+              <h6 text-center>Appointment Date</h5>
               <input type="date" name="Date" class="form-control datepicker" id="date" placeholder="Appointment Date"
                 data-rule="minlen:4" data-msg="Please enter at least 4 chars">
               <div class="validate"></div>
