--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <div class="container">
       <h1>DR.OMKAR KAJALE</h1>
       <h2>MBBS ( DR. D. Y. PATIL MEDICAL COLLEGE , PIMPRI) <br> DTCD , AFIH , CCEBDM <br> CHEST PHYSICIAN AND
-        INTERVENTIONAL PULMONOLOGIST</h2>
-      <h2> COLLEGE OF PHYSICIANS AND SURGEONS OF MUMBAI
-        SPECIALIZATION – PULMONARY MEDICINE
-      </h2>
+        INTERVENTIONAL PULMONOLOGIST <br>
+        COLLEGE OF PHYSICIANS AND SURGEONS OF MUMBAI
+        SPECIALIZATION – PULMONARY MEDICINE</h2>
+      
       <!-- <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a> -->
     </div>
 
