--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
           <div class="row">
             <div class="col-md-4 form-group mt-3">
-              <h6 text-center>Appointment Date</h5>
+              <!-- <h6 text-center>Appointment Date</h5> -->
               <input type="date" name="Date" class="form-control datepicker" id="date" placeholder="Appointment Date"
                 data-rule="minlen:4" data-msg="Please enter at least 4 chars">
               <div class="validate"></div>
