--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
               <!-- <h3>Why Choose Us?</h3> -->
-              <div class="pic"><img src="img/doctor.avif" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/New folder/profile.jpg" class="img-fluid" alt=""></div>
 
             </div>
           </div>
